# My-Work-Report-Fastapi

./: .gitignore  README.md  pyproject.toml  run_app.py
app/: main.py
app/models/: task.py  user.py
app/routes/: auth.py  task.py  user.py
app/schemas/: auth.py  task.py  user.py
app/utilities/: config.py  database.py  helper.py  logger.py  security.py
collection/entry_level_fast_api/: level-001  level-001.py  level-002  level-002.py  level-003  level-003.py  level-004  level-004.json  level-004.py
collection/my_e_commerce_backend/: main.py
collection/my_e_commerce_backend/HTTP-Client/: bruno_collection.json  postman_collection.json
collection/my_e_commerce_backend/models/: auth.py  product.py
collection/my_e_commerce_backend/routes/: auth.py  product.py
collection/my_e_commerce_backend/schemas/: auth.py  product.py
collection/my_e_commerce_backend/utilities/: config.py  logger.py  security.py
collection/my_social_media_backend/: main.py
collection/my_social_media_backend/HTTP-Client/: bruno_collection.json  postman_collection.json
collection/my_social_media_backend/database/: check_post_database.py  check_user_database.py  posts.db
collection/my_social_media_backend/models/: post.py  user.py
database/: check_post_database.py  tasks.json
docs/: notebook
http_client/: config.py  create_task.py  user_login.py  user_signup.py
tests/integration_testing/: test_healthcheck.py  test_user_login.py  test_user_signup.py
tests/unit_testing/: test_healthcheck.py  test_user_login.py  test_user_signup.py
(+30 files in other folders)
